Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -116,8 +116,8 @@ vial ha incrementado de forma alarmante. Las causas de esto pueden variar desde
 velocidad de reacción de servicios médicos, condiciones del impacto, muerte instantánea,
 etc.
 
-Una auditoria sobre la seguridad vial en la ZMG realizada por la SEMOV en colaboración con la Universidad de Guadalajara
-identifican que entre los problemas de seguridad relevantes se encuentran:
+Una auditoría sobre la seguridad vial en la ZMG realizada por la SEMOV en colaboración con la Universidad de Guadalajara
+identifica que entre los problemas de seguridad relevantes se encuentran:
 
 	\begin{itemize}
 		\item Desgaste natural del balizamiento.
@@ -125,7 +125,7 @@ identifican que entre los problemas de seguridad relevantes se encuentran:
 		\item Insuficientes espacios destinados a la circulación peatonal.
 	\end{itemize}
 
-Por otra parte, la SEMOV en su reporte "Zonas de Riesgo" clasifica las causas de accidente viales en:
+Por otra parte, la SEMOV en su reporte ``Zonas de Riesgo'' clasifica a las causas de accidente viales en:
 
 	\begin{itemize}
 		\item Falta de distancia de seguridad.
@@ -157,7 +157,7 @@ Las consecuencias que conlleva el problema de los accidentes automovilísticos e
 \section{Objetivos del proyecto}\label{sec:objs}
 
 En esta sección se plantean los objetivos del proyecto usando como base el
-árbol de problemas (figura \ref{fig:arbol}). La intención en usar este árbol para generar
+árbol de problemas (figura \ref{fig:arbol}). La intención es usar este árbol para generar
 de forma análoga un árbol de objetivos. Esta metodología nos permite garantizar que
 el planteamiento de los objetivos y soluciones está completamente alineado a la identificación
 de los problemas. 
@@ -177,7 +177,7 @@ Zona Metropolitana de Guadalajara.}
 
 El componente medular de este objetivo reconoce que parte del bienestar social es afectado directamente por los accidentes automovilísticos. Este problema tiene el potencial de agravarse sustancialmente con el crecimiento urbano de la ZMG si no se toman las medidas y políticas adecuadas. En este sentido, se pretende analizar información pública disponible para encontrar la relación entre los accidentes viales y las acciones que se pueden llevar a cabo de forma preventiva. Entre estas acciones se identifican políticas públicas y programas sociales con la intención de generar un impacto positivo y benéfico para la sociedad. 
 
-Actualmente se tiene evidencia de casos de éxito respecto a programas sociales que pretenden reducir los accidentes viales de una causa en particular. Dentro de estos casos, destaca el programa de "Salvando Vidas", coordinado por la Secretaría de Movilidad, en donde se atiende de forma exclusiva el consumo de alcohol indebido por conductores de vehículos.
+Actualmente se tiene evidencia de casos de éxito respecto a programas sociales que pretenden reducir los accidentes viales de una causa en particular. Dentro de estos casos, destaca el programa "Salvando Vidas", coordinado por la Secretaría de Movilidad, en donde se atiende de forma exclusiva el consumo de alcohol indebido por conductores de vehículos.
 
 \subsection{Objetivo específico}\label{subsec:specific-objs}
 
@@ -185,13 +185,13 @@ Se propone el siguiente objetivo específico:
 
 \forceindent \textit{Disminuir el número de accidentes automovilísticos letales en la Zona Metropolitana de Guadalajara mediante un esquema de incentivos orientado al uso apropiado del celular.}
 
-Este objetivo se deriva directamente de la parte inferior del árbol en la figura \ref{fig:arbol_obj}. La intención es atender de forma particular y precisa una de las causas más relevantes de la problemática. Esto con el afán de generar un impacto de alto grado y contribuir de una forma más significativa al objetivo general. En particular, se seleccionó este objetivo específico puesto que el uso inadecuado de tecnología celular en zonas urbanas ha presentado una tendencia alcista alarmante.
+Este objetivo se deriva directamente de la parte inferior del árbol en la figura \ref{fig:arbol_obj}. La intención es atender de forma particular y precisa una de las causas más relevantes de la problemática. Esto con el fin de generar un impacto de alto grado y contribuir de una forma más significativa al objetivo general. En particular, se seleccionó este objetivo específico puesto que el uso inadecuado de tecnología celular en zonas urbanas ha presentado una tendencia alcista alarmante.
 
 
 \newpage
 \section{Análisis de los participantes}\label{sec:participants}
 
-El alcance de este documento se limita a la Zona Metropolitana de Guadalajara. Tal zona está integrada por varios municipios, los cuales conforman el área urbana en su conjunto y comparten infraestructura relevante. Los incidentes viales afectan a la "zona urbana" de forma agregada; por esta razón la problemática a tratar trasciende al orden de gobierno municipal. En este sentido, el siguiente orden de gobierno inmediato es el Estado de Jalisco, en el cual se identifican varios participantes. Por otra parte, la naturaleza del problema tiene una orientación publica significativa. En este caso los ciudadanos pertenecientes a la ZMG están involucrados de forma directa. 
+El alcance de este documento se limita a la Zona Metropolitana de Guadalajara. Tal zona está integrada por varios municipios, los cuales conforman el área urbana en su conjunto y comparten infraestructura relevante. Los incidentes viales afectan a la "zona urbana" de forma agregada; por esta razón la problemática a tratar trasciende al orden de gobierno municipal. En este sentido, el siguiente orden de gobierno inmediato es el Estado de Jalisco, en el cual se identifican varios participantes. Por otra parte, la naturaleza del problema tiene una orientación pública significativa. En este caso los ciudadanos pertenecientes a la ZMG están involucrados de forma directa. 
 
 En la siguiente tabla se desglosan los participantes:
 
@@ -216,14 +216,14 @@ La Secretaría de Movilidad (SEMOV) es la autoridad en materia de tránsito y vi
 
 \subsection[IMTJ]{Instituto de Movilidad y Transporte del Estado de Jalisco}\label{subsec:imtj}
 
-El Instituto de Movilidad y Transporte es un organismo público y descentralizado del Estado de Jalisco con el objetivo principal de promover la movilidad sustentable. Este instituto se encarga de proponer e implementar actividades para eficientar el transporte. Tiene la facultad de emitir opinión técnica a la SEMOV. 
+El Instituto de Movilidad y Transporte es un organismo público y descentralizado del Estado de Jalisco cuyo objetivo principal es el de promover la movilidad sustentable. Este instituto se encarga de proponer e implementar actividades para eficientar el transporte. Tiene la facultad de emitir opinión técnica a la SEMOV. 
 
 \subsection[SIOP]{Secretaría de Infraestructura y Obra Pública del Estado de Jalisco}\label{subsec:siop}
 
 La Secretaría de Infraestructura y Obra Pública (SIOP) se encarga del desarrollo, proyección y construcción de obras públicas en el Estado de Jalisco. 
 
 \subsection[SEPAF]{Secretaría de Planeacion y Administracion Financiera de Jalisco}\label{subsec:sepaf}
-La Secretaria de Planeacion y Administración Financiera (SEPAF) es responsable de garantizar que se destinen los bienes y recursos estatales a las acciones que son prioridades en la planeación y desarrollo del estado. 
+La Secretaría de Planeación y Administración Financiera (SEPAF) es responsable de garantizar que se destinen los bienes y recursos estatales a las acciones que son prioridad en la planeación y desarrollo del Estado. 
 
 \newpage
 
@@ -243,7 +243,7 @@ La Secretaria de Planeacion y Administración Financiera (SEPAF) es responsable 
 
 \subsection{Situación actual}\label{subsec:actual}
 
-Actualmente se puede apreciar una disminucion en el número de accidentes por consumo de alcohol  viales, debido a una política para identificar el uso y consumo ilegal de bebidas alcohólicas al conducir.
+Actualmente se puede apreciar una disminución en el número de accidentes viales por consumo de alcohol, debido a una política para identificar el uso y consumo ilegal de bebidas alcohólicas al conducir.
 Por otro lado, a partir del 2015 el número de accidentes automovilísticos letales donde no influye el consumo de alcohol ha comenzado a aumentar. Esto puede ser producto de la reciente alta adopción de tecnologías celulares en la Zona Metropolitana de Guadalajara. En el año 2015 el porcentaje de usuarios de tecnología celular en Jalisco
 era del 76.32\%. Esta cifra aumentó a 81.80\% en 2016. La figura \ref{fig:tipo_celular} muestra la
 proporción de celulares comúnes y smartphones.
@@ -254,13 +254,13 @@ proporción de celulares comúnes y smartphones.
 	\caption{\label{fig:tipo_celular} Crecimiento del Smartphone. Fuente: Elaboración propia}
     \end{figure}
 
-La adopción de smartphones ha aumentado durante el periodo del 2015 al 2016 desde
-el 69.8\% hasta el 82.2\%. En recientes estudios, la Organización Mundial de la Salud ha identificado
+La adopción de smartphones ha aumentado durante el periodo del 2015 al 2016 de un
+69.8\% hasta un 82.2\%. En recientes estudios, la Organización Mundial de la Salud ha identificado
 el uso del celular como un alto factor de riesgo al conducir debido a que genera distracciones
 visuales, cognitivas, físicas y auditivas.
 
-Por otra parte, la Secretaría de Movilidad identificó en 2016 el porcentage de conductores afectados
-por distacciones de celular en distintos municipios pertenecientes a la Zona Metropolitana de Guadalajara.
+Por otra parte, la Secretaría de Movilidad identificó en 2016 el porcentaje de conductores afectados
+por distracciones de celular en distintos municipios pertenecientes a la Zona Metropolitana de Guadalajara.
 El promedio de la Zona indica que al menos 60\% de los conductores se ven afectados por este tipo
 de distracciones al conducir.
 
@@ -271,7 +271,7 @@ de distracciones al conducir.
 
 Tomando en consideración que la adopción de Smartphones
 también presenta una tendencia a la alta y está fuertemente correlacionada con accidentes automovilísticos,
-la seguirdad vial puede verse afectada de forma relevante.
+la seguridad vial puede verse afectada de forma relevante.
 
 	\begin{figure}[H]\centering
 	\includegraphics[width=1\textwidth]{resources/img/parque_vehicular.png}
@@ -281,14 +281,14 @@ la seguirdad vial puede verse afectada de forma relevante.
 \subsubsection{Definición de indicadores}
 
 Los indicadores nos permiter medir el desempeño del proyecto bajo distintos escenarios.
-Respecto al objectivo general, se propone el siguiente indicador:
+Respecto al objetivo general, se propone el siguiente indicador:
 
 \begin{itemize}
 	\item \textbf{Accidentes automovilísticos letales por año}: número absoluto de accidentes automóvilisticos
 con al menos una muerte involucrada.
 \end{itemize}
 
-La disminución del valor de este indicador se relaciona de forma directa con la intención propuesta en el objectivo general.
+La disminución del valor de este indicador se relaciona de forma directa con la intención propuesta en el objetivo general.
 
 Para el objecto particular se proponen:
 
@@ -297,7 +297,7 @@ Para el objecto particular se proponen:
 distracciones relacionadas al uso de celular.
 	\item \textbf{Número de muertes en accidentes automovilísticos que involucren uso de celular}: cerca del 70\% de los
 accidentes automovilísticos son generados por uso inapropiado de celular.
-	\item \textbf{Ahorro estimado}: la reducción de siniestros tiene beneficios económicos positivos para la población
+	\item \textbf{Ahorro estimado}: la reducción de siniestros tiene beneficios económicos para la población
 afectada.
 \end{itemize}
 
@@ -308,13 +308,13 @@ indicador debería aumentar.
 \subsubsection{Pronóstico: Adopción de tecnología celular}
 
 Se propone usar un modelo de la familia exponencial para pronosticar la adopción de tecnología celular en el Estado
-de Jalisco. Asumimos que el procentaje de adopción a nivel estado es igualmente representativo para la Zona
+de Jalisco. Asumimos que el porcentaje de adopción a nivel Estado es igualmente representativo para la Zona
 Metropolitana de Guadalajara puesto que esta consta de varios municipios relevantes del mismo y
 puede ser considerado como una muestra significativa.
 
 El modelo exponencial propuesto en esta sección debe cumplir con las siguientes características:
 \begin{itemize}
-	\item Comportamiento asintótico respecto a $y=100$ puesto que se estan manejando porcentajes.
+	\item Comportamiento asintótico respecto a $y=100$, puesto que se estan manejando porcentajes.
 	\item Relación no lineal respecto al tiempo ya que se está modelando la adopción de una tecnología.
 \end{itemize}
 
@@ -366,7 +366,7 @@ Con estos modelos se crea un pronóstico para los siguientes 3 años (6 años a 
 Los resultados indican que a finales del 2021 aproximadamente 95\% de los habitantes del Estado
 tendrán tecnología celular disponible y 98.73\% de estos usuarios tendrán un Smartphone.
 
-Combinando estos pronósticos es posible determinar el procentaje de la población expuesta al
+Combinando estos pronósticos es posible determinar el porcentaje de la población expuesta al
 uso de Smartphones.
 
 	\begin{figure}[H]\centering
@@ -381,7 +381,7 @@ un modelo con bases probabilísticas que nos permite generar distintas
 simulaciones e identificar la tendencia media.
 
 En este caso se usó como base el crecimiento histórico generado en los
-últimos 20 años. la siguiente figura representa de forma visual el
+últimos 20 años. La siguiente figura representa de forma visual el
 resultado de 200 simulaciones para los siguientes 3 años.
 
 	\begin{figure}[H]\centering
@@ -396,10 +396,10 @@ En el 2016 se reportaron 7 accidentes por cada 1000 vehículos en circulación y
 
 \subsubsection{Pronóstico: Manejo con distracciones}
 
-En 2016 el Instituto de Información Estadística y Geográfica de Jalisco indentificó que
+En 2016, el Instituto de Información Estadística y Geográfica de Jalisco indentificó que
 aproximadamente 60\% de los conductores de automóvil manejan con alguna distracción
 relacionada con el uso de Smartphones. Para modelar la dinámica de esta propoción de conductores podemos
-asumir que existe una relación proporcional con el procentaje de usuarios de Smartphone.
+asumir que existe una relación proporcional con el porcentaje de usuarios de Smartphone.
 
 Por lo tanto, se define la siguiente relación lineal:
 
@@ -422,7 +422,7 @@ Usando los datos del pronóstico anterior, se genera el pronóstico para $\delta
     \end{figure}
 
 Para el 2021, usando las tendencias y supuestos mostrados en esta sección, se estima
-que aproximadamente el 83.81\% de los conductores manejen con distracciones generadas
+que aproximadamente el 83.81\% de los conductores manejan con distracciones generadas
 directamente por un smartphone.
 
 Esta cifra es particularmente alarmante puesto que actualmente la SEMOV identifica
@@ -439,12 +439,12 @@ tecnología celular.
 
 Dado el pronóstico del crecimiento del parque vehicular y el porcentaje de conductores expuestos a
 distracciones con Smartphones, es posible calcular el número de accidentes generados particularmente
-por el uso de esta tecnología al conducir. Por estadísticas de la Semov, sabemos que en 2016 se registraron 7
+por el uso de esta tecnología al conducir. Por estadísticas de la SEMOV, sabemos que en 2016 se registraron 7
 accidentes automovilísticos por cada 1000 vehículos en circulación. Adicionalmente, un estudio realizado por este
 mismo organismo sugiere que actualmente el 70\% de los siniestros son generados por una distracción directa de la
 tecnología celular. En este sentido entonces podemos asumir 4.9 accidentes por cada 1000 vehículos en circulación.
 
-Por lo tanto, se propone la siguiente formula para calcular el número de accidentes viales generados por el uso
+Por lo tanto, se propone la siguiente fórmula para calcular el número de accidentes viales generados por el uso
 de celular, basado en datos del 2016:
 
 \begin{equation}
@@ -461,7 +461,7 @@ Usando esta propuesta obtenemos los siguientes resultados:
 Se puede apreciar la tendencia alcista. De estos resultados, se espera que al menos 2.26\% de tales accidentes sean
 fatales.
 
-\subsubsection{Pronósitco: Muertes derivadas por uso de Smartphones}
+\subsubsection{Pronóstico: Muertes derivadas por uso de Smartphones}
 
 Utilizando los datos de la SEMOV sabemos que al menos el 2.26\% de los accidentes viales
 son fatales (implica al menos 1 muerte). No obstante, en los últimos años se ha mostrado una tendencia alcista. Por 
@@ -471,7 +471,7 @@ La siguiente gráfica ilustra la evolución del número de accidentes viales con
 
 	\begin{figure}[H]\centering
 	\includegraphics[width=0.6\textwidth]{resources/img/smart_accidents_deaths.png}
-	\caption{\label{fig:prono_accidentes_fatales} Numero de accidentes fatales generados por uso de celular. Fuente: Elaboración propia}
+	\caption{\label{fig:prono_accidentes_fatales} Número de accidentes fatales generados por uso de celular. Fuente: Elaboración propia}
     \end{figure}
 
 En general entre el 2018 y el 2021 se tendrían al menos 3317 muertes, suponiendo que cada accidente fatal solamente 
@@ -481,8 +481,9 @@ conlleva a una persona fallecida (caso optimista).
 
 El proyecto pretende generar un alto impacto en la disminución de la sinestralidad generada principalmente por el uso
 de Smartphones. No obstante, la tendencia de carácter exponencial que muestra la adopción de esta tecnología en la
-población de interés genera un alto reto.//
-Se trata no solo de un fenómeno extraordinario o moda, sino de una aparente necesidad de comunicación y dependencia a estos dispositivos, de manera que se vuelve parte de nuestra rutina, incluso al conducir. Por lo que una intervención se vuelve necesaria.  
+población de interés genera un alto reto.
+
+Se trata no solo de un fenómeno extraordinario o moda, sino de una aparente necesidad de comunicación y dependencia a estos dispositivos, de manera que se vuelve parte de la rutina social, incluso al conducir. Por lo que una intervención se vuelve necesaria.  
 
 \subsubsection{Pronóstico: Manejo con distracciones}
 
@@ -519,19 +520,19 @@ Como se puede observar en la $figura 18$ el número de choques generados por el 
 
 \subsubsection{Pronóstico: Muertes derivadas por uso de smartphones}
 
-En la sección anterior se utilizaron datos de la SEMOV ajustados a una expectativa alcista para calcular el número 
-de accidentes viales fatales dado la proyección del número de accidentes general. La tasa que se utilizó anteriormente 
-fue del 3\%. En esta sección se espera que el impacto del proyecto logre reducir la tasa al 2\%.
+En la sección anterior, se utilizaron datos de la SEMOV ajustados a una expectativa alcista para calcular el número 
+de accidentes viales fatales dado la proyección del número de accidentes general. La tasa que se utilizó anteriormente, para representar los accidentes automovilísticos que terminaron al menos con una muerte 
+fue del 3\%. En esta sección, mediante la aplicación del proyecto de incentivos para el mejor uso de la tecnología celular se espera tener un impacto positivo que logre reducir la tasa de accidentes viales que terminen en fatalidad al 2\%.
 
 Se obtienen los siguientes resultados:
 
 	\begin{figure}[H]\centering
 	\includegraphics[width=0.8\textwidth]{resources/img/smart_fatal_accidents_after.png}
-	\caption{\label{fig:prono_accidentes_fatales_after} Numero de accidentes fatales después de proyecto. Fuente: Elaboración propia}
+	\caption{\label{fig:prono_accidentes_fatales_after} Número de accidentes fatales después de proyecto. Fuente: Elaboración propia}
     \end{figure}
+    
 
-El numero de muertes entre el 2018 y 2021 con el proyecto se estima de 1982 (bajo el mismo supuesto optimista
-de una muerte por accidente fatal). Esto representa una reducción acumulada de 1335 muertes en este periodo. 
+Con la aplicación del proyecto se estima que el número de muertes provocadas por accidentes automovilísticos entre el periodo de 2018 a 2021 sea de 1982, suponiendo el mejor escenario posible, es decir, una muerte por accidente con categoría fatal, lo que llevaría a una reducción en los próximos 3 años de aproximadamente 1335 muertes, Es decir en solo cuatro años se estaría reduciendo un 33\% los accidentes viales que provocan mortalidad y a su vez una calidad de vida de las personas posiblemente involucradas en el siniestro.
 
 
 \subsection{Análisis Costo-Beneficio}
@@ -544,11 +545,41 @@ de una muerte por accidente fatal). Esto representa una reducción acumulada de 
 
 \subsubsection{Costos}
 
--- work in progress --
+Se estima que con el desarrollo de la app y el esquema de incentivos, al menos el 14\% de los conductores
+estén participando de forma activa en el programa durante el primer año y esta cifra aumente 10 puntos porcentuales
+por año. 
+
+\textbf{Mercadotecnia y publicidad}
+Una vez iniciado el proyecto, va a ser necesario 
+De acuerdo a la información proporcionada por un importante publicista y mercadólogo del periódico "El Noroeste", 
 
 \textbf{Desarrollo y mantenimiento de la app}
 
--- work in progress --
+Hay dos componentes esenciales del proyecto: la aplicación móvil y la infraestructura tecnológica necesaria para
+el manejo de datos de forma eficiente. Para reducir costos y complejidad, se propone utilizar en la medida que sea
+posible, servicios administrados y frameworks de desarrollo. En particular se contempla usar el ''stack'' de tecnologías
+de Google. 
+
+Para la aplicación móvil se está considerando usar el lenguaje de programación de Dart y el ambiente de desarrollo de 
+Flutter que permite usar el mismo código para aplicaciones de Android y iOS. A continuación se propone el personal necesario y una estimación de sueldos mensual:  
+\begin{itemize}
+\item Project manager: \$30,000.00 MXN
+\item User Experience Designer: \$25,000.00 MXN
+\item Senior Mobile Developer: \$50,000.00 MXN
+\item Mid. Mobile Developer: \$30,000.00 MXN
+\item Jr Developer: \$20,000.00 MXN
+\end{itemize}
+
+El manejo de la infraestructura y servicios en la nube es otra cuestión de suma importancia. Se propone el siguiente equipo para manejo de datos e infraestructura: 
+\begin{itemize}
+\item Project manager: \$30,000.00 MXN
+\item Senior Data Engineer: \$60,000.00 MXN
+\item Senir Data Scientist: \$60,000.00 MXN
+\item Mid Data Engineer: \$40,000.00 MXN
+\item Jr Data Engineer/Scientist: \$30,000.00 MXN
+\end{itemize}
+
+En general de forma mensual se pagaría \$ 375,000.00 en sueldos de ingeniería lo cual es \$4,500,000.00 MXN de forma anual. 
 
 \textbf{Almacenamiento y procesamiento de datos en la nube}
 
@@ -565,9 +596,7 @@ de una muerte por accidente fatal). Esto representa una reducción acumulada de 
 
 \textbf{Reducción de accidentes viales}
 
-
 Con base en la información proporcionada por la Convención de Aseguradores de México, podemos optar por una cifra certera en el costo promedio por accidente, este no depende de ninguna variable, es simplemente por cualquier accidente.
-
 
 Suponiendo un costo de siniestro promedio de 24,603 MXN (según la Convención de Aseguradores de México) el ahorro
 monetario anual sería el siguiente:
@@ -579,9 +608,9 @@ monetario anual sería el siguiente:
 
 
 
-Demostrando las gráficas, podemos comparar que los siniestros han incrementado de manera drástica debido a la distracción de Smart Phone. Concluyendo que el comportamiento del ahorro está en función a la distracción por celulares, entre otros. 
+Demostrando las gráficas, podemos comparar que los siniestros han incrementado de manera drástica debido a la distracción por el uso de Smart Phone. Concluyendo que el comportamiento del ahorro está en función a la distracción por celulares, entre otras variables que lo determinan. Es por esto que al reducir dicho factor, el gasto por siniestros se verá afectado directamente. 
  
-Derivándose en una reducción del gasto y frenando de manera considerable la tendencia alcista de siniestros, como se muestra en el árbol de problemas. Abonando de forma concreta a la reducción (y prevención) de accidentes dentro se la Zona Metropolitana de Guadalajara. 
+Derivándose en una reducción del gasto y frenando de manera considerable la tendencia alcista de siniestros, como se muestra en el árbol de problemas $figura 5$. Abonando de forma concreta a la reducción (y prevención) de accidentes dentro se la Zona Metropolitana de Guadalajara. 
 
 \textbf{Reducción de muertes}
 
@@ -591,10 +620,23 @@ de este proyecto en la disminución de accidentes viales con repercusiones fatal
 
 La siguiente gráfica ilustra el número de vidas salvadas por año: 
 
--- agregar grafica --
+	\begin{figure}[H]\centering
+	\includegraphics[width=0.6\textwidth]{resources/img/saved_lifes.png}
+	\caption{\label{fig:vidas_salvadas} Estimación de vidas salvadas. Fuente: Elaboración propia}
+    \end{figure}
 
-Para 
 
+Se utiliza el valor estadístico de la vida (\$ 1,687,037.00 MXN) proporcionado por ... para ...
+
+El beneficio monetario resultante es el siguiente:
+
+
+	\begin{figure}[H]\centering
+	\includegraphics[width=0.6\textwidth]{resources/img/saved_lifes_money.png}
+	\caption{\label{fig:vidas_salvadas_dinero} Estimación monetaria de vidas salvadas. Fuente: Elaboración propia}
+    \end{figure}
+
+Se puede observar... 
 
 \textbf{Información accionable}
 
@@ -602,8 +644,11 @@ Para
 
 \textbf{Rentabilidad}
 
+-- work in progress --
 
-\subsection{Simulación Montecarlo y Análisis de Sensibilidad}
+\subsection{Simulación Montecarlo}
+
+\subsection{Análisis de Sensibilidad}
 
 \subsection{Resultados}
 % * <rohdzmota@gmail.com> 2018-02-17T00:16:37.605Z:
