Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -550,7 +550,7 @@ estén participando de forma activa en el programa durante el primer año y esta
 por año. 
 
 \textbf{Mercadotecnia y publicidad}
-Una vez iniciado el proyecto, va a ser necesario tener un poder 
+Una vez iniciado el proyecto, va a ser necesario tener un poder de alcance lo suficientemente grande para poder 
 De acuerdo a la información proporcionada por un importante publicista y mercadólogo del periódico "El Noroeste", 
 
 \textbf{Desarrollo y mantenimiento de la app}
