Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -549,9 +549,19 @@ Se estima que con el desarrollo de la app y el esquema de incentivos, al menos e
 estén participando de forma activa en el programa durante el primer año y esta cifra aumente 10 puntos porcentuales
 por año. 
 
+	\begin{figure}[H]\centering
+	\includegraphics[width=0.8\textwidth]{resources/img/users.png}
+	\caption{\label{fig:nusers} Número de usuarios. Fuente: Elaboración propia}
+    \end{figure}
+
+
 \textbf{Mercadotecnia y publicidad}
-Una vez iniciado el proyecto, va a ser necesario tener un poder de alcance lo suficientemente grande para poder 
-De acuerdo a la información proporcionada por un importante publicista y mercadólogo del periódico "El Noroeste", 
+
+Una vez iniciado el proyecto, va a ser necesario tener un alcance lo suficientemente grande para poder llegar al mayor número de personas, y así poder lograr entonces generar un verdadero impacto que sea beneficioso y que permita inicialmente que las personas conozcan la aplicación así como los incentivos que podrían obtener al utilizarla, para que finalmente cumpla con su función de disminuir el uso del celular al conducir y así se alcance el objetivo de disminuir, no solamente los accidentes, sino que se evite el mayor número de muertes posiblemente causadas por el uso inadecuado de los Smartphones.
+
+Una de las maneras en que se buscará este alcance es através de las redes sociales más utilizadas como lo son, Facebook e Instagram,
+
+De acuerdo a la información proporcionada por un importante publicista y mercadólogo del periódico "El Noroeste", el poder tener un alcance a trav a solamente 62 personas, el gasto mínimo sería de aproximadamente 40 pesos. Ahora bien, si se desea tener un alcance 
 
 \textbf{Desarrollo y mantenimiento de la app}
 
@@ -583,7 +593,11 @@ En general de forma mensual se pagaría \$ 375,000.00 en sueldos de ingeniería 
 
 \textbf{Almacenamiento y procesamiento de datos en la nube}
 
--- work in progress --
+El presidente de la Asociación Mexicana de Transporte y Movilidad afirma que los mexicanos gastan 3 años manejando a 
+lo largo de su vida. Suponiendo que una persona suele manejar entre los 18 y 60 años entonces al día en promedio 
+una persona gasta 1.7 horas manejando. Nuestra aplicación pretende supervisar este tiempo en conducción, capturando 
+información de los sensores de GPS y acelerómetro cada 10 segundos. Esto equivale a recibir 612 eventos de información 
+diarios o 223380 eventos de información al año por usuario. 
 
 \textbf{Incentivos}
 
